<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MoviesActivity">

    <LinearLayout
        android:id="@+id/menu_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/primaryColorLight"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/search_icon_desc"
            android:src="@drawable/baseline_local_movies_24"
            android:layout_gravity="center_vertical"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/searchCardView"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/searchIcon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:src="@drawable/baseline_search_24"
                    android:contentDescription="@string/search_icon_desc" />

                <EditText
                    android:id="@+id/searchEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/searchIcon"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:hint="@string/search_hint"
                    android:autofillHints="Search"
                    android:singleLine="true"/>
<!--
                <ImageButton
                    android:id="@+id/clearButton"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="?attr/selectableItemBackgroundBorderless"

                    android:src="@drawable/baseline_clear_24"
                    android:visibility="gone"
                    android:contentDescription=" " />-->
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
<LinearLayout
    android:id="@+id/movie_container"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="vertical"
    android:padding="8dp"
    app:layout_constraintTop_toBottomOf="@id/menu_bar"
    android:background="@color/backgroundLight"
    app:layout_constraintBottom_toBottomOf="parent">

    <RelativeLayout
        android:id="@+id/movie_image_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12.dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_gravity="center">


        <ImageView
            android:id="@+id/movie_image"
            android:layout_width="200.dp"
            android:layout_height="200.dp"
            android:layout_gravity="center"
            android:contentDescription="@string/movie_image_desc"
            android:src="@drawable/baseline_local_movies_24"/>

        <ProgressBar
            android:id="@+id/image_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_image_container"
        android:layout_marginStart="15.dp"
        android:layout_marginTop="15.dp"
        android:text="@string/no_title"
        android:textStyle="bold"
        android:textColor="@color/textMovieTitleLight"
        android:textSize="24.sp"/>

    <TextView
        android:id="@+id/rating_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15.dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_title"
        android:text="@string/rating"
        android:textColor="@color/textPrimaryLight"/>

    <TextView
        android:id="@+id/genres_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15.dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rating_text"
        android:text="@string/genres"
        android:textColor="@color/textPrimaryLight"/>

    <TextView
        android:id="@+id/overview_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genres_text"
        android:layout_marginStart="15.dp"
        android:text="@string/overview"
        android:textColor="@color/textPrimaryLight"/>

</LinearLayout>



    <ProgressBar
        android:id="@+id/general_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone" />
    <Button
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/primaryColorLight"
        android:text="@string/reload_button"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>