<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MoviesActivity">

    <LinearLayout
        android:id="@+id/menu_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/primaryColor"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/search_icon_desc"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center_vertical"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/searchCardView"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/searchIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:src="@drawable/baseline_search_24"
                    android:contentDescription="@string/search_icon_desc" />

                <EditText
                    android:id="@+id/searchEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/searchIcon"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:hint="@string/search_hint"
                    android:autofillHints="search"
                    android:singleLine="true"/>
<!--
                <ImageButton
                    android:id="@+id/clearButton"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="?attr/selectableItemBackgroundBorderless"

                    android:src="@drawable/baseline_clear_24"
                    android:visibility="gone"
                    android:contentDescription=" " />-->
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible" />

    <Button
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/primaryColor"
        android:text="@string/reload_button"
        android:visibility="invisible"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/popular_movies"
        android:layout_width="match_parent"
        android:layout_height="0.dp"
        android:paddingBottom="50.dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/menu_bar"/>

    <!--
    <TextView
        android:id="@+id/error_message"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12.dp"
        android:textColor="@color/textErrorColor"
        android:textStyle="bold"
        android:textSize="18.sp"
        android:textAlignment="center"
        android:text="@string/error_message"
        android:layout_marginBottom="24.dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    -->

</androidx.constraintlayout.widget.ConstraintLayout>